; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-ssa.c_init_tree_ssa.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-ssa.c_init_tree_ssa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@int_tree_map_hash = common dso_local global i32 0, align 4
@int_tree_map_eq = common dso_local global i32 0, align 4
@referenced_vars = common dso_local global i8* null, align 8
@default_defs = common dso_local global i8* null, align 8
@call_clobbered_vars = common dso_local global i8* null, align 8
@addressable_vars = common dso_local global i8* null, align 8
@NULL_TREE = common dso_local global i32 0, align 4
@global_var = common dso_local global i32 0, align 4
@aliases_computed_p = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @init_tree_ssa() #0 {
  %1 = load i32, i32* @int_tree_map_hash, align 4
  %2 = load i32, i32* @int_tree_map_eq, align 4
  %3 = call i8* @htab_create_ggc(i32 20, i32 %1, i32 %2, i32* null)
  store i8* %3, i8** @referenced_vars, align 8
  %4 = load i32, i32* @int_tree_map_hash, align 4
  %5 = load i32, i32* @int_tree_map_eq, align 4
  %6 = call i8* @htab_create_ggc(i32 20, i32 %4, i32 %5, i32* null)
  store i8* %6, i8** @default_defs, align 8
  %7 = call i8* @BITMAP_ALLOC(i32* null)
  store i8* %7, i8** @call_clobbered_vars, align 8
  %8 = call i8* @BITMAP_ALLOC(i32* null)
  store i8* %8, i8** @addressable_vars, align 8
  %9 = call i32 (...) @init_alias_heapvars()
  %10 = call i32 (...) @init_ssanames()
  %11 = call i32 (...) @init_phinodes()
  %12 = load i32, i32* @NULL_TREE, align 4
  store i32 %12, i32* @global_var, align 4
  store i32 0, i32* @aliases_computed_p, align 4
  ret void
}

declare dso_local i8* @htab_create_ggc(i32, i32, i32, i32*) #1

declare dso_local i8* @BITMAP_ALLOC(i32*) #1

declare dso_local i32 @init_alias_heapvars(...) #1

declare dso_local i32 @init_ssanames(...) #1

declare dso_local i32 @init_phinodes(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
